--- a/intro/Makefile
+++ b/intro/Makefile
@@ -10,7 +10,7 @@ ARGS=
 test-maxargs: $(TEST)/bin/maxargs
 	$<
 
-$(TEST)/bin/maxargs: $(TEST)/maxargs_test.c $(OBJ)/funcs.o $(OBJ)/types.o $(OBJ)/util.o
+$(TEST)/bin/maxargs: $(TEST)/maxargs_test.c $(OBJ)/maxargs.o $(OBJ)/types.o $(OBJ)/util.o
 	$(CC) $^ -o $@ -lcriterion
 
 $(OBJ)/%.o: $(SRC)/%.c
