interp first test

--- a/intro/Makefile
+++ b/intro/Makefile
@@ -10,6 +10,12 @@ ARGS=
 test-maxargs: $(TEST)/bin/maxargs
 	$<
 
+test-interp: $(TEST)/bin/interp
+	$<
+
+$(TEST)/bin/interp: $(TEST)/interp_test.c $(OBJ)/interp.o $(OBJ)/types.o $(OBJ)/util.o
+	$(CC) $^ -o $@ -lcriterion
+
 $(TEST)/bin/maxargs: $(TEST)/maxargs_test.c $(OBJ)/maxargs.o $(OBJ)/types.o $(OBJ)/util.o
 	$(CC) $^ -o $@ -lcriterion
 
