--- a/lex/Makefile
+++ b/lex/Makefile
@@ -4,10 +4,10 @@ SRCS=$(wildcard $(SRC)/*.c)
 OBJ=obj
 OBJS=$(patsubst $(SRC)/%.c, $(OBJ)/%.o, $(SRCS))
 TEST=test
-ARGS=
+ARGS=-g
 
 lextest: $(OBJ)/driver.o $(OBJ)/lex.yy.o $(OBJ)/errormsg.o $(OBJ)/util.o
-	$(CC) $^ -o $@
+	$(CC) $(ARGS) $^ -o $@
 
 $(SRC)/lex.yy.c: $(SRC)/tiger.lex
 	lex -o $@ $< 
