--- a/syntax/Makefile
+++ b/syntax/Makefile
@@ -4,12 +4,19 @@ SRCS=$(wildcard $(SRC)/*.c)
 OBJ=obj
 OBJS=$(patsubst $(SRC)/%.c, $(OBJ)/%.o, $(SRCS))
 ARGS=-g
+TIG=test.tig
 
-test: a.out
-	./$< test.tig
+test-syntax: a.out
+	./$< $(TIG)
+
+test-lex: lextest
+	./$< $(TIG)
 
 a.out: $(OBJ)/parsetest.o $(OBJ)/y.tab.o $(OBJ)/lex.yy.o $(OBJ)/errormsg.o $(OBJ)/util.o
 	$(CC) $(ARGS) $^
+
+lextest: $(OBJ)/driver.o $(OBJ)/lex.yy.o $(OBJ)/errormsg.o $(OBJ)/util.o
+	$(CC) $(ARGS) $^ -o $@
 
 $(SRC)/y.tab.c: $(SRC)/tiger.grm
 	bison -v --header=$(SRC)/y.tab.h -o $@ $<
