--- a/syntax/Makefile
+++ b/syntax/Makefile
@@ -18,11 +18,15 @@ a.out: $(OBJ)/parsetest.o $(OBJ)/y.tab.o $(OBJ)/lex.yy.o $(OBJ)/errormsg.o $(OBJ
 lextest: $(OBJ)/driver.o $(OBJ)/lex.yy.o $(OBJ)/errormsg.o $(OBJ)/util.o
 	$(CC) $(ARGS) $^ -o $@
 
+$(SRC)/y.tab.h: $(SRC)/y.tab.c
+
 $(SRC)/y.tab.c: $(SRC)/tiger.grm
 	bison -v --header=$(SRC)/y.tab.h -o $@ $<
 
 $(SRC)/lex.yy.c: $(SRC)/tiger.lex
 	lex -o $@ $< 
+
+$(OBJ)/driver.o: $(SRC)/y.tab.h
 
 $(OBJ)/%.o: $(SRC)/%.c
 	$(CC) $(ARGS) -c $< -o $@
